[package]
name = "simple-slab"
version = "0.2.3"
authors = ["Nathan Sizemore <nathanrsizemore@gmail.com>"]
description = "Fast lightweight slab allocator"
repository = "https://github.com/nathansizemore/simple-slab"
readme = "README.md"
keywords = ["slab", "allocator"]
license = "MPL-2.0"

[dependencies]
libc = "^0.2"
